--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>ODIN</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/beefmisoramen.html">Beef Miso Ramen</a>
-
-</body>
+      <ul>
+        <li><a href="recipes/beefmisoramen.html">Beef Miso Ramen</a></li>
+        <li><a href="recipes/mochi.html">Mochi</a></li>
+        <li><a href="recipes/terriyaki-rice.html">Terriyaki-rice</a></li>
+      </ul>  
+    </body>
 </html>
